# dhalia

./: .gitignore  .infisical.json  Dockerfile  Dockerrun.aws.json  README.md  app.py  deploy-prod.sh  deploy-sandbox.sh  deploy.sh  deploy_dev_eb.sh  pyproject.toml
.ebextensions/: env.config  loadbalancer.config  nginx.config
.elasticbeanstalk/: config.yml
aws/dev/: create_ebs.sh  delete_ebs.sh  deploy_ebs.sh  logs_ebs.sh
data/: model_prompt_1.pkl  model_prompt_7.pkl  prompt_1.pkl  prompt_7.pkl  quantile_in_days_to_shelf_life_range.pkl
