[project]
name = "dhalia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.7",
    "google-api-python-client>=2.157.0",
    "google-auth>=2.37.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "google>=3.0.0",
    "gradio>=5.3.0",
    "joblib>=1.4.2",
    "pandas>=2.2.3",
    "anthropic>=0.43.1",
    "infisical-python>=2.3.5",
]
